--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "eject": "react-scripts eject",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "build-storybook -o docs-build -s ./stories/assets",
-    "predeploy": "build-storybook -o docs-build -s ./stories/assets",
+    "predeploy": "npm run build-storybook",
     "deploy": "gh-pages -d docs-build"
   },
   "eslintConfig": {
