--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "storybook": "storybook dev -p 6006",
     "predeploy": "npm run build-storybook",
     "deploy-storybook": "gh-pages -d storybook-static",
-    "build-storybook": "build-storybook"
+    "build-storybook": "storybook build"
   },
   "eslintConfig": {
     "extends": [
